--- a/app/views/TravelPlanResponse/plan.scala.html
+++ b/app/views/TravelPlanResponse/plan.scala.html
@@ -2,6 +2,8 @@
 
 <div class="plan @if(hidden){ temp-hide }" data-number="@planNumber">
 
+	<input type="hidden" name="itinerary_plans[@{planNumber-1}].itinerary_plan_id" value="@plan.map(_.id)">
+
     <div class="accordion-toggle @if(open){ open }else{ collapsed }  " data-toggle="collapse">Plan #<span class="plan-number-id">@planNumber</span></div>
 
     <div class="accordion-collapse collapse @if(open){ in } ">
