--- a/app/views/TravelPlanResponse/trip.scala.html
+++ b/app/views/TravelPlanResponse/trip.scala.html
@@ -2,6 +2,8 @@
 
 <div class="trip @if(hidden){ temp-hide }" data-number="@tripNumber">
 
+	<input type="hidden" name="itinerary_plans[0].trip_plans[@{tripNumber-1}].trip_plan_id" value="@trip.map(_.id)">
+
     <div class="accordion-toggle @if(open){ open }else{ collapsed }" data-toggle="collapse">Trip #<span class="trip-number-id">@tripNumber</span></div>
 
     <div class="accordion-collapse collapse @if(open){ in }">
@@ -15,7 +17,7 @@
                }
            }.getOrElse{
                 @flight( hidden = false )
-            }
+           }
 
         </div>
 
@@ -34,22 +36,22 @@
             <div class="col-md-4 form-group">
 
                 <label class="radio">
-                    <input @if(trip.exists(_.rental)){checked}  class="additional-transportation rental display-trigger" type="radio" value="rental" name="additional_transportation" data-display-trip-form=".form-group.preferred-rental-company" >
+                    <input @if(trip.exists(_.rental)){checked}  class="additional-transportation rental display-trigger" type="radio" value="rental" name="itinerary_plans[0].trip_plans[@{tripNumber-1}].additional_transportation" data-display-trip-form=".form-group.preferred-rental-company" >
                     Rental
                 </label>
 
                 <label class="radio">
-                    <input @if(trip.exists(_.taxi)){checked} class="additional-transportation taxi" type="radio" value="taxi" name="additional_transportation">
+                    <input @if(trip.exists(_.taxi)){checked} class="additional-transportation taxi" type="radio" value="taxi" name="itinerary_plans[0].trip_plans[@{tripNumber-1}].additional_transportation">
                     Taxi
                 </label>
 
                 <label class="radio">
-                    <input @if(trip.exists(_.shuttle)){checked}  class="additional-transportation shuttle" type="radio" value="shuttle"  name="additional_transportation" >
+                    <input @if(trip.exists(_.shuttle)){checked}  class="additional-transportation shuttle" type="radio" value="shuttle"  name="itinerary_plans[0].trip_plans[@{tripNumber-1}].additional_transportation" >
                     Shuttle
                 </label>
 
                 <label class="radio">
-                    <input @if(trip.exists(_.isThereAdditionalTransportation)){checked}  class="additional-transportation none" type="radio" value="none" name="additional_transportation" checked>
+                    <input @if(trip.exists(_.isThereAdditionalTransportation)){checked}  class="additional-transportation none" type="radio" value="none" name="itinerary_plans[0].trip_plans[@{tripNumber-1}].additional_transportation" checked>
                     No, thanks.
                 </label>
 
@@ -63,22 +65,22 @@
 
             <div class="col-md-12 form-group">
                 <label for="hotel_name"> Name </label>
-                <input class="form-control input-lg" type="text" id="hotel_name" name="hotel_name" value="@trip.map(_.hotel_name) " placeholder="">
+                <input class="form-control input-lg" type="text" id="hotel_name" name="itinerary_plans[0].trip_plans[@{tripNumber-1}].hotel_name" value="@trip.map(_.hotel_name) " placeholder="">
             </div>
 
             <div class="col-md-12 form-group">
                 <label for="hotel_confirm_number"> Confirmation Number </label>
-                <input class="form-control input-lg" type="text" id="hotel_confirm_number" name="hotel_confirm_number" value="@trip.map(_.hotel_confirm) " placeholder="">
+                <input class="form-control input-lg" type="text" id="hotel_confirm_number" name="itinerary_plans[0].trip_plans[@{tripNumber-1}].hotel_confirm" value="@trip.map(_.hotel_confirm)" placeholder="">
             </div>
 
             <div class="col-md-12 form-group">
                 <label for="hotel_address"> Address </label>
-                <input class="form-control input-lg" type="text" id="hotel_address" name="hotel_address" value="@trip.map(_.hotel_address)" placeholder="">
+                <input class="form-control input-lg" type="text" id="hotel_address" name="itinerary_plans[0].trip_plans[@{tripNumber-1}].hotel_address" value="@trip.map(_.hotel_address)" placeholder="">
             </div>
 
             <div class="col-md-12 form-group">
                 <label for="hotel_phone"> Phone Number </label>
-                <input class="form-control input-lg" type="text" id="hotel_phone" name="hotel_phone" value="@trip.map(_.hotel_phone)" placeholder="">
+                <input class="form-control input-lg" type="text" id="hotel_phone" name="itinerary_plans[0].trip_plans[@{tripNumber-1}].hotel_phone" value="@trip.map(_.hotel_phone)" placeholder="">
             </div>
 
         </div>
