--- a/app/views/TravelPlanResponse/flight.scala.html
+++ b/app/views/TravelPlanResponse/flight.scala.html
@@ -3,7 +3,8 @@
 <div class="flight @if(hidden){ temp-hide }" data-number="@{flightNumber+1}">
 
 	<input type="hidden" name="itinerary_plans[@planNumber].trip_plans[@tripNumber].flights[@flightNumber].flight_id" value="@flight.map(_.id)">
-	
+	<input type="hidden" name="itinerary_plans[@planNumber].trip_plans[@tripNumber].flights[@flightNumber].flight_number" value="@flightNumber">
+
     <div class="accordion-toggle @if(open){ open }else{ collapsed }" data-toggle="collapse">Flight #<span class="flight-number-id">@{flightNumber+1}</span></div>
 
     <div class=" accordion-collapse collapse @if(open){ in }">
