--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -31,6 +31,7 @@
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/styles-blue.css")" id="grove-styles">
 
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/vendor/layerslider/skins/grove/skin.css")" type="text/css">
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/vendor/bootstrap-datetimepicker.min.css")" type="text/css">
 
 	    <!--[if lt IE 9]>
 	        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/ie8.css")">
@@ -40,8 +41,9 @@
         <!-- Libs -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="@routes.Assets.at("javascript/vendor/jquery/jquery-1.9.1.min.js")><\/script>')</script>
-        <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?sensor=false" ></script>
         <script src="@routes.Assets.at("javascript/vendor/typeahead.bundle.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascript/vendor/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascript/tagsinput/bootstrap-tagsinput.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascript/angra.js")" type="text/javascript"></script>
 
