--- a/public/stylesheets/styles-blue.css
+++ b/public/stylesheets/styles-blue.css
@@ -1957,3 +1957,46 @@ input[type=search]
 {
   margin-right: 0;
 }
+
+.date-picker,
+.time-picker
+{
+    position: relative;
+}
+
+.date-picker .form-control[readonly],
+.time-picker .form-control[readonly]
+{
+    background-color: white;
+    cursor: pointer;
+}
+
+.date-picker i,
+.time-picker i
+{
+    position: absolute;
+    top: 10px;
+    right: -15px;
+    cursor: pointer;
+}
+
+.icon-chevron-up::before,
+.icon-chevron-down::before
+{
+    position: absolute;
+    display: inline-block;
+    font: 24px/1em 'Glyphicons Regular';
+    font-style: normal;
+    font-weight: normal;
+    color: #666;
+    vertical-align: middle;
+    text-transform: none;
+    -webkit-font-smoothing: antialiased;
+    content: "\E214";
+}
+
+.icon-chevron-down::before
+{
+    content: "\E213";
+    margin-top: -20px;
+}
