--- a/app/views/TravelPlanResponse/flight.scala.html
+++ b/app/views/TravelPlanResponse/flight.scala.html
@@ -21,12 +21,18 @@
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="name"> Departure Date </label>
-                    <input class="form-control input-lg" type="text" id="depart_date" name="itinerary_plans[@planNumber].trip_plans[@tripNumber].flights[@flightNumber].depart_date" value="@flight.map(_.depart_date)" placeholder="">
+                    <div class="date-picker" class="input-append">
+                        <input readonly class="form-control input-lg add-on" data-format="MM/dd/yyyy"  name="itinerary_plans[@planNumber].trip_plans[@tripNumber].flights[@flightNumber].depart_date" value="@flight.map(_.depart_date)"  type="text"></input>
+                        <i class="input-date-icon glyphicons calendar"></i>
+                    </div>
                 </div>
 
                 <div class="col-md-6 form-group">
                     <label for="name"> Departure Time </label>
-                    <input class="form-control input-lg" type="text" id="depart_time" name="itinerary_plans[@planNumber].trip_plans[@tripNumber].flights[@flightNumber].depart_time" value="@flight.map(_.depart_time)" placeholder="">
+                    <div class="time-picker" class="input-append">
+                        <input readonly class="form-control input-lg add-on" data-format="HH:mm PP" name="itinerary_plans[@planNumber].trip_plans[@tripNumber].flights[@flightNumber].depart_time" value="@flight.map(_.depart_time)"  type="text"></input>
+                        <i class="input-date-icon glyphicons clock"></i>
+                    </div>
                 </div>
             </div>
 
@@ -40,12 +46,18 @@
             <div class="row">
                 <div class="col-md-6 form-group">
                     <label for="name"> Arrival Date </label>
-                    <input class="form-control input-lg" type="text" id="arrival_date" name="itinerary_plans[@planNumber].trip_plans[@tripNumber].flights[@flightNumber].arrival_date" value="@flight.map(_.arrival_date)" placeholder="">
+                    <div class="date-picker" class="input-append">
+                        <input readonly class="form-control input-lg add-on" data-format="MM/dd/yyyy" name="itinerary_plans[@planNumber].trip_plans[@tripNumber].flights[@flightNumber].arrival_date" value="@flight.map(_.arrival_date)" type="text"></input>
+                        <i class="input-date-icon glyphicons calendar"></i>
+                    </div>
                 </div>
 
                 <div class="col-md-6 form-group">
                     <label for="name"> Arrival Time </label>
-                    <input class="form-control input-lg" type="text" id="arrival_time" name="itinerary_plans[@planNumber].trip_plans[@tripNumber].flights[@flightNumber].arrival_time" value="@flight.map(_.arrival_date)" placeholder="">
+                    <div class="time-picker" class="input-append">
+                        <input readonly class="form-control input-lg add-on" data-format="HH:mm PP" name="itinerary_plans[@planNumber].trip_plans[@tripNumber].flights[@flightNumber].arrival_time" value="@flight.map(_.arrival_date)"  type="text"></input>
+                        <i class="input-date-icon glyphicons clock"></i>
+                    </div>
                 </div>
             </div>
 
