--- a/app/views/faq.scala.html
+++ b/app/views/faq.scala.html
@@ -33,23 +33,23 @@
                             Cet Services does not keep or discount your points. Instead, we can help you set up a rewards program with the hotel chain of your choice, giving you the most amount of points and rewards for each stay. We can help you compare and choose the program that is best for you.</div>
                     </div>
                 </div>
-                <!--div class="question">
-                    <a href="#answer4" class="faq-toggle blue" data-toggle="collapse">Magni labore tempora fugit rerum eaque iste?</a>
+                <div class="question">
+                    <a href="#answer4" class="faq-toggle blue" data-toggle="collapse">How does your site save me time?</a>
 
                     <div id="answer4" class="collapse">
                         <div class="answer">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, nobis, dignissimos, voluptatibus veritatis aliquid magni labore tempora fugit rerum eaque deserunt odio voluptatum recusandae assumenda beatae veniam maxime eveniet iste! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit repellendus velit rem libero dicta sint rerum id quasi! Fugit, dolorum eligendi alias veniam praesentium at rerum aut sapiente in cumque.</div>
+                            Basically, we do all the work.  We find the best flight for you using your preferred airline and hotels and then we book them making sure you get the upgrades, points, and any other program that gives you an edge. </div>
                     </div>
                 </div>
                 <div class="question">
-                    <a href="#answer5" class="faq-toggle" data-toggle="collapse">Suscipit repellendus velit rem libero dicta sint rerum id quasi?</a>
+                    <a href="#answer5" class="faq-toggle" data-toggle="collapse">What if I need to change a flight or hotel?</a>
 
                     <div id="answer5" class="collapse">
                         <div class="answer">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, nobis, dignissimos, voluptatibus veritatis aliquid magni labore tempora fugit rerum eaque deserunt odio voluptatum recusandae assumenda beatae veniam maxime eveniet iste!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit repellendus velit rem libero dicta sint rerum id quasi! Fugit, dolorum eligendi alias veniam praesentium at rerum aut sapiente in cumque.</div>
+                            Call or email us.  We are available to settle your needs 24/7. We know your itinerary and we will adjust your schedule to suit you. </div>
                     </div>
                 </div>
-                <div class="question">
+                <!--<div class="question">
                     <a href="#answer6" class="faq-toggle" data-toggle="collapse">Suscipit repellendus velit rem libero dicta sint rerum id quasi?</a>
 
                     <div id="answer6" class="collapse">
