--- a/app/views/footer.scala.html
+++ b/app/views/footer.scala.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row footer">
             <div class="col-sm-3">
-                <h4>CET Services</h4>
+                <h4>Concierge Executive Travel Services</h4>
                 <p>Personal and exclusive travel-planning for the discerning executive</p>
             </div>
             <div class="col-sm-3">
