--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -12,7 +12,7 @@
                     <li class='inactive'> <a href="@routes.Application.landingPage()">Home</a> </li>
 
                     <li class='dropdown'>
-                        <a href='#' data-toggle='dropdown'>About CET <b class='caret'></b></a>
+                        <a href='#' data-toggle='dropdown'>About CET Services <b class='caret'></b></a>
 						<ul class='dropdown-menu'>
 							<li><a href="@routes.Application.aboutus()">About Us</a></li>
                             <li><a href="@routes.Application.faq()">FAQ</a></li>
