--- a/app/views/landingpage.scala.html
+++ b/app/views/landingpage.scala.html
@@ -19,7 +19,7 @@
         <div class="ls-slide" data-ls="transition2d:5;">
             <img class="ls-bg" src='@routes.Assets.at("images/slides/bg-five.jpg")' alt="Slider Background">
 
-            <img  class="ls-l" src='@routes.Assets.at("images/slider/slide1.png")' alt="CET Logo"
+            <img  class="ls-l" src='@routes.Assets.at("images/slider/slide1_2.png")' alt="CET Logo"
                   style="top:15px; left:650px;"
                   data-ls=" durationin : 2000; delayin : 0; offsetxin: right;  offsetxout: right; ">
 
@@ -58,8 +58,7 @@
         <div class="ls-slide" data-ls="transition2d:5;">
             <img class="ls-bg" src='@routes.Assets.at("images/slides/bg-three.jpg")' alt="Slider Background">
 
-            <!--<img  class="ls-l" src='@routes.Assets.at("images/sunset2.jpg")' alt="Sunset"!-->
-            <img  class="ls-l" src='@routes.Assets.at("images/slide2.png")' alt="Sunset"
+            <img  class="ls-l" src='@routes.Assets.at("images/slider/slide2Rep.png")' alt="Sunset"
                   style="top:25px; left:50px;"
                   data-ls="durationin: 2500; offsetxin: left; offsetxout: left;">
 
