--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,7 +9,7 @@
         <meta name="description" content="travel agency">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon2.ico")">
 
         <!-- Bootstrap styles -->
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/vendor/bootstrap/bootstrap.css")">
